--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -12,6 +12,7 @@ span.etiqueta
   background-color: #F6FFE6  
 .back1
   background-color: #ffecb8  
+ 
 
 .linea-tiempo-c__header__item__line-container:after, .linea-tiempo-c__header__item__line-container:before
   background-color: #004046
@@ -22,6 +23,14 @@ span.etiqueta
 
 .tabs-c__tab--active span
   font-weight: 600
+
+.cajon.color-secundario
+  background-color: #F6FFE6 
+
+.lista-ul--color li > i:first-of-type
+  font-size: 10px
+  margin-top: 3px
+
 
 .tabs-a__tab
   background-color: #F6FFE6 
