--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -2,6 +2,8 @@ italic
   font-style: oblique
 figcaption
   font-weight: 500
+.etiqueta 
+  padding: 2px 0px 5px
 
 .parrafo-intro
   padding-right: 3rem!important
