--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -45,3 +45,10 @@ span.etiqueta
     left: 45%
     width: 575px
     top: 21%
+
+@media (min-width: 1400px)
+  .col-xxl-5
+    flex: 0 0 auto
+    width: 53.666667%
+  .banner-principal__info
+    padding-left: 150px !important
