--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -54,10 +54,10 @@ $color-institucional: #ff8f00
 
 // Colores Curso ---------------------------------------
 
-$color-primario: #FF4B52
-$color-secundario: #DDFFA7
-$color-acento-contenido: #004046
-$color-acento-botones: #FFC935
+$color-primario: #064A93
+$color-secundario: #BAEDFC
+$color-acento-contenido: #86C3E0
+$color-acento-botones: #FDCF57
 
 // Color Tipografias -----------------------------------
 $color-headers: $color-sistema-texto
