--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -20,7 +20,7 @@ span.etiqueta
 .back-verde
   background-color: #F0FCFF  
 .back1
-  background-color: #ffecb8  
+  background-color: #BAEDFC  
  
 
 .linea-tiempo-c__header__item__line-container:after, .linea-tiempo-c__header__item__line-container:before
@@ -39,6 +39,9 @@ span.etiqueta
 
 .cajon.color-secundario
   background-color: #F6FFE6 
+.cajon.color-acento-botones
+  background-color: #FFEAB2
+
 
 .lista-ul--color li > i:first-of-type
   font-size: 10px
@@ -52,8 +55,19 @@ span.etiqueta
   background: rgb(5,52,103)
   background: linear-gradient(4deg, rgba(5,52,103,1) 0%, rgba(6,74,147,1) 100%)
 
+.titulo-sexto h3
+  background-color: #BAEDFC
+  padding: 5px 20px
+  border-radius: 50px
+  width: 460px
+
+
+
+
 /* MOBILE */
 @media (min-width: $bp-min-lg)  
+  .acordeon-tema4 .acordion__header
+    padding-left: 3rem!important
   .img-intro img
     position: absolute
     left: 35%
